# codex-bridge-cli

./: AGENTS.md  Cargo.toml  README.md
docs/: codex-bridge-cli-design.md  progress-plan.md  workflow.md
examples/: codex-bridge.yaml
scripts/: run.sh
src/: bridge.rs  config.rs  lib.rs  main.rs  provider.rs
src/proxy/: json_canonical.rs  mod.rs
src/proxy/providers/: codex_chat_history.rs  mod.rs  streaming_codex_chat.rs  transform.rs  transform_codex_chat.rs
tests/fixtures/m2-real-upstream/: models-response.json  nonstream-request.json  nonstream-response.json  stream-request.json  stream-response.sse
tests/fixtures/m3-codex-cli/: followup-turn.jsonl  simple-turn.jsonl  tool-turn.jsonl
